# mahsm

./: .gitignore  .pre-commit-config.yaml  404.html  DOCS_STRUCTURE.md  LICENSE  MULTIMODAL_QUICK_START.md  PHASE1_TESTS_COMPLETE.md  PHASE2_TESTS_COMPLETE.md  PHASE3_TESTS_COMPLETE.md  PUBLISHING.md  QUICKSTART.md  README.md  REFACTOR_PLAN.md  SETUP_SUMMARY.md  TESTING_COMPLETE.md  TESTING_PLAN.md  doc_agent.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sitemap.xml  specs.md  test_doc_agent.py
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml  docs.yml  publish.yml
api-reference/: index.html
building-blocks/dspy/best-practices/: index.html
building-blocks/dspy/modules/: index.html
building-blocks/dspy/optimizers/: index.html
building-blocks/dspy/overview/: index.html
building-blocks/dspy/signatures/: index.html
building-blocks/evalprotocol/eval-tests/: index.html
building-blocks/evalprotocol/evaluation-tests/: index.html
building-blocks/evalprotocol/langfuse-integration/: index.html
building-blocks/evalprotocol/langgraph-integration/: index.html
building-blocks/evalprotocol/overview/: index.html
concepts/declarative-design/: index.html
concepts/four-pillars/: index.html
concepts/workflow/: index.html
design/ma.tuning-spec/: index.html
design/tuning-architecture/: index.html
docs/: api-reference.md  index.md  multimodal-capabilities-spec.md  quickstart.md
docs/building-blocks/dspy/: modules.md  (+4 more)
docs/concepts/: declarative-design.md  four-pillars.md  workflow.md
docs/design/: ma.tuning-spec.md  tuning-architecture.md
docs/getting-started/: installation.md  quickstart.md
docs/research/: ember-edges-spec.md  ember-integration.md  eval-loop.md  learnable-edges.md  pr-feat-ember-edges.md  rate-limiting.md
docs/tutorials/: best-of-n-judge-dspy.md  best-of-n-judge.md  budgeted-best-of-n.md  codegen-critique.md  cost-latency-budgeting.md  deterministic-testing.md  evaluation-testing.md  hello-graph.md  hitl.md  langfuse-observability.md  moderation-guards.md  multi-agent.md  overview.md  parallel-wave.md  parameter-sweeps.md  policy-router-quickstart.md  rag-tools.md  special-edges-quickstart.md  streaming.md  vision-agents.md
examples/: README.md  document_understanding.py  multi_image_comparison.py  vision_agent.py  visual_reasoning_chain.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
mahsm/: __init__.py  core.py  dspy.py  edges.py  exceptions.py  graph.py  reducers.py  testing.py  trace.py  tracing.py  tune.py  tuning.py
mahsm/config/: __init__.py  checkpointers.py  settings.py
mahsm/inference/: __init__.py  executor.py  messages.py
mahsm/prompt/: __init__.py  storage.py  validation.py
search/: search_index.json
specs/001-specs-md-build/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  test_budgeted_best_of_n.py  test_core.py  test_dspy.py  test_edges_best_of_n.py  test_edges_parallel.py  test_edges_parallel_wave.py  test_edges_policy_router.py  test_edges_vmap.py  test_edges_vmap_rate_limit.py  test_exports.py  test_graph.py  test_graph_integration.py  test_init.py  test_integration_errors.py  test_integration_workflows.py  test_reducers.py  test_smoke.py  test_tracing.py  test_tuning.py  utils.py
tests/examples/: test_vision_agent.py
tests/integration/: test_dspy_integration.py  test_langfuse_tracing.py  test_langgraph_integration.py
tests/proto/: dspy.py  graph.py
tests/smoke/: test_end_to_end.py
tests/unit/: test_config_contract.py  test_inference_contract.py  test_prompt_load_contract.py  test_prompt_save_contract.py
(+30 files in other folders)
