[project]
name = "mahsm"
version = "0.1.0"
description = "Multi-Agent Hyper-Scaling Methods"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy>=3.0.3",
    "eval-protocol[langfuse]>=0.2.64",
    "langchain>=1.0.1",
    "langfuse>=3.8.1",
    "langgraph>=1.0.1",
    "openinference-instrumentation-dspy>=0.1.30",
    "python-dotenv>=1.0.0",
]
